# devtools_scicomp_project_2025

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: config.yaml  config_numba.yaml  config_numpy.yaml  config_spambase.yaml
logs/: numpy_knn_classifier.txt  slow_knn_classifier.txt  spam_numpy_knn_classifier.txt
scripts/: run.py
shell/: submit.sh  submit_spam.sh
src/pyclassify/: __init__.py  classifier.py  datamodule.py  model.py  module.py  utils.py
test/: test_.py
